Work around unknown Mac Intel driver bug causing non-deterministic behavior in GPU readback from 2D canvas

BUG=665656
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2503283007
Cr-Commit-Position: refs/heads/master@{#433094}

Former-commit-id: e4acee67ea6e24c3e594719ca33b4beeb46b4bc6